tests/context-tests/expectations/fail/empty.orb.expectation
#Contains
Found empty Context declaration, expected non-empty block or `with` declaration